--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
         <p>LinkedIn: <a href="https://www.linkedin.com/in/peram-ranjith-872aa820a/" target="_blank">https://www.linkedin.com/in/peram-ranjith-872aa820a/</a></p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="pro.js"></script>
 </body>
 </html>
