--- a/index.html
+++ b/index.html
@@ -30,12 +30,22 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Subaru Frontend Project:</strong> Built using React and CSS.</li>
-            <li><strong>MIT-BIH Data Analytics:</strong> Data analysis with machine learning.</li>
-            <li><strong>Huffman Coding Tree:</strong> Implemented in Python.</li>
-        </ul>
+        <h3>Projects</h3>
+<ul>
+    <li>
+        <strong>Frontend Web Development Project (Subaru Project)</strong><br>
+        Developed a user-friendly frontend application using React, HTML, and CSS, enhancing user interaction and interface design.
+    </li>
+    <li>
+        <strong>Data Analytics Project</strong><br>
+        Conducted a data analysis using the MIT-BIH dataset, focusing on pattern recognition and data preprocessing techniques.
+    </li>
+    <li>
+        <strong>Huffman Coding Tree Implementation</strong><br>
+        Developed a Python-based algorithm for implementing Huffman Coding with a focus on efficient data compression and tree-building techniques.
+    </li>
+</ul>
+
     </section>
 
     <section id="contact">
