--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peram Ranjith - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+    emailjs.init('YOUR_PUBLIC_KEY'); // Replace 'YOUR_PUBLIC_KEY' with your EmailJS public key
+</script>
+
 </head>
 <body>
     <header>
