--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
         </form>
         <div id="form-feedback"></div>
     </section>
+    <form id="test-form">
+    <input type="text" id="name" placeholder="Name" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <textarea id="message" placeholder="Message" required></textarea>
+    <button type="submit">Send</button>
+</form>
+<div id="form-feedback"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>
+    emailjs.init('YOUR_PUBLIC_KEY'); // Replace 'YOUR_PUBLIC_KEY' with your actual public key
+</script>
+<script>
+    document.getElementById('test-form').addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        emailjs.send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', {
+            name: document.getElementById('name').value,
+            email: document.getElementById('email').value,
+            message: document.getElementById('message').value,
+        }).then(() => {
+            document.getElementById('form-feedback').innerHTML = 'Email sent successfully!';
+        }, (error) => {
+            document.getElementById('form-feedback').innerHTML = 'Error sending email.';
+            console.error(error);
+        });
+    });
+</script>
+
 
     <footer>
         <p>&copy; 2024 Peram Ranjith</p>
